new Integer is deprecated.